--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "15.3.2",
     "react-native": "0.37.0",
+    "react-native-card-view": "0.0.3",
     "whatwg-fetch": "^2.0.1"
   },
   "jest": {
@@ -18,6 +19,7 @@
     "babel-eslint": "^7.1.1",
     "babel-jest": "17.0.2",
     "babel-preset-react-native": "1.9.0",
+    "chance": "^1.0.4",
     "eslint": "^3.10.2",
     "eslint-plugin-react": "^6.7.1",
     "jest": "17.0.3",
